--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
-# Synthetic Ecosystems
+ <!DOCTYPE html>
+<html>
+<body>
 
-## Neither Here Nor There
+<h1>Synthetic Ecosystems</h1>
+<p>Here's some text.</p>
+<h2>Neither Here Nor There</h2>
+
+</body>
+</html>
