switched response ordering

--- a/nhntlistener/index.html
+++ b/nhntlistener/index.html
@@ -39,9 +39,9 @@
                     <br><br>
         
                     <div></div>
-                    <ul id="list">
+                    <ol id="list" list-style-type="none">
         
-                    </ul>
+                    </ol>
                 </div>
             </div>
 
