switched response ordering

--- a/nhntlistener/index.html
+++ b/nhntlistener/index.html
@@ -39,7 +39,7 @@
                     <br><br>
         
                     <div></div>
-                    <ol id="list" list-style-type="none">
+                    <ol id="list" style="list-style-type:none">
         
                     </ol>
                 </div>
