--- a/index.html
+++ b/index.html
@@ -1,10 +1,35 @@
- <!DOCTYPE html>
-<html>
-<body>
 
-<h1>Synthetic Ecosystems</h1>
-<p>Here's some text.</p>
-<h2>Neither Here Nor There</h2>
+<!doctype html>
+<html lang="en">
+<head>
+  <title>Synthetic Ecosystems</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-</body>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.1/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+
+
+</head>
+
+    <body>
+
+        <div class="jumbotron text-center">
+            <h1>Synthetic Ecosystems</h1>
+        </div>
+
+        <div id="container-fluid">
+            <div class="row justify-content-center">
+                <div class="col text-center">
+
+                <h2 class="mb-3">Neither Here Nor There</h2>
+                <a class="btn btn-outline-dark btn-lg" href="https://syntheticecosystems.github.io/nhntlistener/index.html" role="button">NHNT Listener App</a>
+
+            </div>
+        </div>
+
+         
+    </body>
 </html>
