--- a/nhntlistener/index.html
+++ b/nhntlistener/index.html
@@ -33,8 +33,8 @@
                     <textarea name="textarea" id="rxData" style="width:300px;height:100px;" disabled></textarea>
                     </div>
 
-                    <button id="captureStart">start listening</button>
-                    <button id="captureStop" hidden>stop listening</button>
+                    <button class="btn btn-outline-dark btn-sm" id="captureStart">start listening</button>
+                    <button class="btn btn-outline-dark btn-sm" id="captureStop" hidden>stop listening</button>
         
                     <br><br>
         
