--- a/nhntlistener/index.html
+++ b/nhntlistener/index.html
@@ -20,21 +20,19 @@
         </div>
 
         <div id="container-fluid">
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col text-center">
-                    <p>Press the button to start listening to the plants!</p>
+                    <h4>Press the button to start listening to the plants!</h4>
                 </div>
-            </div> 
+            </div>  -->
 
             <div class="row justify-content-center">
                 <div class="col text-center">
  
-                    <div class="form-group">
-                    <textarea name="textarea" id="rxData" style="width:300px;height:100px;" disabled></textarea>
-                    </div>
+                    <h4 id="rxData"></h4>
 
                     <button type="button" class="btn btn-outline-dark btn-sm" id="captureStart">start listening</button>
-                    <button type="button" class="btn btn-outline-dark btn-sm" id="captureStop" hidden>stop listening</button>
+                    <button type="button" class="btn btn-outline-dark btn-sm" id="captureStop">stop listening</button>
         
                     <br><br>
         
