--- a/nhntlistener/index.html
+++ b/nhntlistener/index.html
@@ -17,43 +17,22 @@
 
         <div class="jumbotron text-center">
             <h1>NHNT Listening Application</h1>
+            <br><br>
+            <h4 id="rxData"></h4>
+            <br><br>
+            <button type="button" class="btn btn-outline-dark btn-sm" id="captureStart">start listening</button>
+            <button type="button" class="btn btn-outline-dark btn-sm" id="captureStop">stop listening</button>
         </div>
 
         <div id="container-fluid">
-            <!-- <div class="row">
-                <div class="col text-center">
-                    <h4>Press the button to start listening to the plants!</h4>
-                </div>
-            </div>  -->
 
             <div class="row justify-content-center">
                 <div class="col text-center">
- 
-                    <h4 id="rxData"></h4>
-
-                    <button type="button" class="btn btn-outline-dark btn-sm" id="captureStart">start listening</button>
-                    <button type="button" class="btn btn-outline-dark btn-sm" id="captureStop">stop listening</button>
-        
-                    <br><br>
-        
-                    <div></div>
-                    <ol id="list" style="list-style-type:none">
+                    <ol id="list" style="list-style-type:none;padding-left:0">
                     </ol>
                 </div>
             </div>
 
-            <!-- <div>send data</div> <textarea name="textarea" id="txData" style="width:300px;height:100px;">Hello javascript</textarea><br>
-            <button onclick="onSend();">send</button>
-            <br><br> -->
-            <!-- <div class="cell-version">
-                <span>
-                    |
-                    Build time: <span class="nav-link">Sat Sep 10 17:57:37 2022</span> |
-                    Commit hash: <a class="nav-link" href="https://github.com/ggerganov/ggwave/commit/d0296025">d0296025</a> |
-                    Commit subject: <span class="nav-link">ref #77 : add MT protocols to ggwave.js + new API for setting freqStart</span> |
-                    <a class="nav-link" href="https://github.com/ggerganov/ggwave/tree/master/examples/ggwave-js">Source Code</a> |
-                </span>
-            </div> -->
         </div>
 
         <script type="text/javascript" src="https://ggwave-js.ggerganov.com/ggwave.js"></script>
