--- a/nhntlistener/index.html
+++ b/nhntlistener/index.html
@@ -17,9 +17,9 @@
 
         <div class="jumbotron text-center">
             <h1>NHNT Listening Application</h1>
-            <br><br>
-            <h4 id="rxData"></h4>
-            <br><br>
+            <br>
+            <p id="rxData"></p>
+            <br>
             <button type="button" class="btn btn-outline-dark btn-sm" id="captureStart">start listening</button>
             <button type="button" class="btn btn-outline-dark btn-sm" id="captureStop">stop listening</button>
         </div>
