--- a/nhntlistener/index.html
+++ b/nhntlistener/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" type="text/css" href="listener.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"> -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.1/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -14,15 +14,18 @@
 
 </head>
 
-    <body>
+    <body class="black-bg">
 
-        <div class="jumbotron text-center">
-            <h1>NHNT Listening Application</h1>
-            <br>
+        <div class="header">
+            <h1>Neither Here, Nor There</h1>
+        </div>
+
+        <div class="midsection">
+
             <p id="rxData"></p>
-            <br>
-            <button type="button" class="btn btn-outline-dark btn-sm" id="captureStart">start listening</button>
-            <button type="button" class="btn btn-outline-dark btn-sm" id="captureStop">stop listening</button>
+
+          <button type="button" role="button" class="btn btn-outline-dark btn-sm" id="captureStart">Start Listening</button>
+          <button type="button" role="button" class="btn btn-outline-dark btn-sm" id="captureStop">Stop Listening</button>
         </div>
 
         <div id="container-fluid">
@@ -30,6 +33,8 @@
             <div class="row justify-content-center">
                 <div class="col text-center">
                     <ol id="list" style="list-style-type:none;padding-left:0">
+                      <!-- For me, the planetary immediately evokes a connection between life and its futures on the one hand, and the Earth on the other hand. What comes to my mind is the biophysical organic material and mineral order — a geological magma-filled rock topped with the entangled orders of physical, organic phenomena such as plants, animals, minerals and so forth, as well as the artifacts and things and tools we have invented. -->
+
                     </ol>
                 </div>
             </div>
@@ -38,6 +43,6 @@
 
         <script type="text/javascript" src="https://ggwave-js.ggerganov.com/ggwave.js"></script>
         <script type='text/javascript' src="listener.js"> </script>
-         
+
     </body>
 </html>
