Styled now for phone. Untested on iPad

--- a/nhntlistener/index.html
+++ b/nhntlistener/index.html
@@ -16,6 +16,8 @@
 
     <body class="black-bg">
 
+      <div class="container">
+
         <div class="header">
             <h1>Neither Here, Nor There</h1>
         </div>
@@ -33,6 +35,7 @@
             <div class="row justify-content-center">
                 <div class="col text-center">
                     <ol id="list" style="list-style-type:none;padding-left:0">
+                      <!-- For me, the planetary immediately evokes a connection between life and its futures on the one hand, and the Earth on the other hand. What comes to my mind is the biophysical organic material and mineral order — a geological magma-filled rock topped with the entangled orders of physical, organic phenomena such as plants, animals, minerals and so forth, as well as the artifacts and things and tools we have invented.<br/> -->
                       <!-- For me, the planetary immediately evokes a connection between life and its futures on the one hand, and the Earth on the other hand. What comes to my mind is the biophysical organic material and mineral order — a geological magma-filled rock topped with the entangled orders of physical, organic phenomena such as plants, animals, minerals and so forth, as well as the artifacts and things and tools we have invented. -->
 
                     </ol>
@@ -40,6 +43,7 @@
             </div>
 
         </div>
+        <div>
 
         <script type="text/javascript" src="https://ggwave-js.ggerganov.com/ggwave.js"></script>
         <script type='text/javascript' src="listener.js"> </script>
