--- a/nhntlistener/index.html
+++ b/nhntlistener/index.html
@@ -19,7 +19,7 @@
       <div class="container">
 
         <div class="header">
-            <h1>Neither Here, Nor There</h1>
+            <h1>Neither Here Nor There</h1>
         </div>
 
         <div class="midsection">
